--- a/css/topNavStyle.css
+++ b/css/topNavStyle.css
@@ -19,13 +19,13 @@ p {
     height: 70px;
     line-height: 70px;
 
-    vertical-align: middle;
     background-color: orange;
 
     position: relative;
 }
 
 .HeadingWrapper {
+    display: block;
     position: absolute;
     top: 50%; left: 100px;
     transform: translate(0%,-50%);
@@ -33,8 +33,6 @@ p {
     height: 50;
     width: 220px;
     line-height: 50px;
-
-    vertical-align: middle;
     text-align: center;
     border-radius: 25px;
 
@@ -47,6 +45,7 @@ p {
 }
 
 .Buttons {
+    display: block;
     position: absolute;
     top: 50%; right: 30px;
     transform: translate(0%, -50%);
@@ -54,6 +53,7 @@ p {
 }
 
 .ButtonWrapper {
+    display: block;
     float: right;
 
     text-decoration: none;
@@ -61,7 +61,6 @@ p {
     width: 150px;
     line-height: 46px;
 
-    vertical-align: middle;
     text-align: center;
 }
 
