--- a/public/views/addDishPage/addDishPage.html
+++ b/public/views/addDishPage/addDishPage.html
@@ -2,13 +2,18 @@
     <head>
         <title>changskitchen</title>
 
-        <link rel="stylesheet" type="text/css" href="/support/css/topNavStyle.css">
-        <link rel="stylesheet" type="text/css" href="/support/css/searchField.css">
+        <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
+        <link rel="stylesheet" type="text/css" href="../support/css/searchField.css">
         <link rel="stylesheet" type="text/css" href="./addDishPage.css">
 
-        <script src="/support/js/topNavBar.js"></script>
-        <script type="module" src="./addDishPage.js"></script>
+        <script src="../support/js/topNavBar.js"></script>
+        <script src="/public/views/support/js/class/MenuDishes.js"></script>
+        <script src="./addDishPage.js"></script>
         
+
+        <link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
+        <canvas></canvas>
+        <script src="../support/js/canvas.js"></script>
     </head>
 
     <body onload="clickedAddDish(); load();">
