--- a/public/views/ordersPage/ordersPage.html
+++ b/public/views/ordersPage/ordersPage.html
@@ -2,11 +2,16 @@
     <head>
         <title>changskitchen</title>
 
-        <link rel="stylesheet" type="text/css" href="/support/css/topNavStyle.css">
+        <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
         <link rel="stylesheet" type="text/css" href="./ordersPage.css">
 
-        <script src="/support/js/topNavBar.js"></script>
+        <script src="../support/js/topNavBar.js"></script>
         <script src="./ordersPage.js"></script>
+
+
+        <link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
+        <canvas></canvas>
+        <script src="../support/js/canvas.js"></script>
     </head>
 
     <body onload="clickedOrders(); load();">
