--- a/public/views/usersPage/usersPage.html
+++ b/public/views/usersPage/usersPage.html
@@ -2,13 +2,17 @@
     <head>
         <title>changskitchen</title>
 
-        <link rel="stylesheet" type="text/css" href="/support/css/topNavStyle.css">
-        <link rel="stylesheet" type="text/css" href="/support/css/searchField.css">
+        <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
+        <link rel="stylesheet" type="text/css" href="../support/css/searchField.css">
         <link rel="stylesheet" type="text/css" href="./usersPage.css">
 
-        <script src="/support/js/topNavBar.js"></script>
+        <script src="../support/js/topNavBar.js"></script>
         <script src="./usersPage.js"></script>
 
+
+        <link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
+        <canvas></canvas>
+        <script src="../support/js/canvas.js"></script>
     </head>
 
     <body onload="clickedUsers(); load();">
