--- a/public/views/menuPage/menuPage.html
+++ b/public/views/menuPage/menuPage.html
@@ -2,11 +2,15 @@
     <head>
         <title>changskitchen</title>
 
-        <link rel="stylesheet" type="text/css" href="/support/css/topNavStyle.css">
+        <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
         <link rel="stylesheet" type="text/css" href="./menuPage.css">
 
-        <script src="/support/js/topNavBar.js"></script>
+        <script src="../support/js/topNavBar.js"></script>
         <script src="./menuPage.js"></script>
+
+        <link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
+        <canvas></canvas>
+        <script src="../support/js/canvas.js"></script>
 
     </head>
 
@@ -64,6 +68,7 @@
 
             </div>
         </div>
+
 
     </body>
 </html>
