--- a/public/views/LoginPage/LogInPage.html
+++ b/public/views/LoginPage/LogInPage.html
@@ -33,6 +33,23 @@
 	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
 
+	<!--===============================================================================================-->
+	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/animsition/js/animsition.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/bootstrap/js/popper.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/select2/select2.min.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/daterangepicker/moment.min.js"></script>
+	<script src="vendor/daterangepicker/daterangepicker.js"></script>
+	<!--===============================================================================================-->
+	<script src="vendor/countdowntime/countdowntime.js"></script>
+	<!--===============================================================================================-->	
+	<script src="js/main.js"></script>
+
 </head>
 <body>
 	
@@ -56,10 +73,10 @@
 						<span class="focus-input100-2"></span>
 					</div>
 
-					<div class="container-login100-form-btn m-t-20" onclick="signIn();">
-						<button class="login100-form-btn">
+					<div class="container-login100-form-btn m-t-20" onclick="logIn();">
+						<p class="login100-form-btn">
 							Sign in
-						</button>
+						</p>
 					</div>
 
 					<div class="text-center p-t-45 p-b-4">
@@ -85,25 +102,6 @@
 			</div>
 		</div>
 	</div>
-	
-
-	
-<!--===============================================================================================-->
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/animsition/js/animsition.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/daterangepicker/moment.min.js"></script>
-	<script src="vendor/daterangepicker/daterangepicker.js"></script>
-<!--===============================================================================================-->
-	<script src="vendor/countdowntime/countdowntime.js"></script>
-<!--===============================================================================================-->
-	<script type="module" src="js/main.js"></script>
 
 </body>
 </html>
