Add logout button

--- a/public/Authentication/LoginPage/css/main.css
+++ b/public/Authentication/LoginPage/css/main.css
@@ -147,6 +147,7 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 15px;
+  cursor: pointer;
   background: rgb(238, 228, 174);
 }
 
@@ -310,6 +311,7 @@ input.input100 {
 /*------------------------------------------------------------------
 [ Button ]*/
 .container-login100-form-btn {
+  cursor: pointer;
   width: 100%;
   display: -webkit-box;
   display: -webkit-flex;
