--- a/public/views/addDishPage/addDishPage.html
+++ b/public/views/addDishPage/addDishPage.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../support/css/searchField.css">
         <link rel="stylesheet" type="text/css" href="./addDishPage.css">
 
+        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
         <script src="../support/js/topNavBar.js"></script>
         <script src="/public/views/support/js/class/MenuDishes.js"></script>
         <script src="./addDishPage.js"></script>
@@ -50,6 +51,8 @@
                     <p class="ButtonTitle">Menu</p>
                 </a>
             </div>
+
+            <i class="fa fa-sign-out-alt"></i>
 
         </div>
 
