--- a/public/views/menuPage/menuPage.html
+++ b/public/views/menuPage/menuPage.html
@@ -6,8 +6,8 @@
         <link rel="stylesheet" type="text/css" href="./menuPage.css">
 
         <script src="../support/js/topNavBar.js"></script>
-        <script src="./menuPage.js"></script>
-        
+        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+        <script src="./menuPage.js"></script>        
 
         <!--
         <link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
@@ -32,6 +32,7 @@
                 <p class="Heading">Chang's Kitchen</p>
             </div>
 
+
             <div class="Buttons"> 
                 <a class="ButtonWrapper" href="../addDishPage/addDishPage.html" id="AddDish">
                     <p class="ButtonTitle">Add dish</p>
@@ -49,6 +50,8 @@
                     <p class="ButtonTitle">Menu</p>
                 </a>
             </div>
+
+            <i class="fa fa-sign-out-alt" onclick="logOut();"></i>
 
         </div>
 
