--- a/public/views/ordersPage/ordersPage.html
+++ b/public/views/ordersPage/ordersPage.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
         <link rel="stylesheet" type="text/css" href="./ordersPage.css">
 
+        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
         <script src="../support/js/topNavBar.js"></script>
         <script src="./ordersPage.js"></script>
 
@@ -47,6 +48,8 @@
                     <p class="ButtonTitle">Menu</p>
                 </a>
             </div>
+
+            <i class="fa fa-sign-out-alt"></i>
 
         </div>
 
