--- a/public/views/usersPage/usersPage.html
+++ b/public/views/usersPage/usersPage.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="../support/css/searchField.css">
         <link rel="stylesheet" type="text/css" href="./usersPage.css">
 
+        <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
         <script src="../support/js/topNavBar.js"></script>
         <script src="./usersPage.js"></script>
 
@@ -48,6 +49,8 @@
                 </a>
             </div>
 
+            <i class="fa fa-sign-out-alt" onclick="logOut();"></i>
+
         </div>
 
         <div class="MainPage">
@@ -61,7 +64,7 @@
                 <div class="UserWrapper">
                     <p class="Name">Truong Dinh Dong</p>
                     <p class="Phone">0911099706</p>
-                    <img class="BinImage" src="/support/images/bin.jpg">
+                    <img class="BinImage" src="../support/images/bin.jpg">
                     <p class="Rank">Loyal User</p>
                 </div>
 
