--- a/public/Authentication/LoginPage/css/main.css
+++ b/public/Authentication/LoginPage/css/main.css
@@ -116,6 +116,7 @@ iframe {
 }
 
 .txt2 {
+  cursor: pointer;
   font-family: OpenSans-Regular;
   font-size: 15px;
   line-height: 1.4;
@@ -173,6 +174,7 @@ iframe {
 }
 
 .login100-form-title {
+  cursor: pointer;
   display: block;
   font-family: OpenSans-Regular;
   font-size: 30px;
