--- a/public/views/ordersPage/ordersPage.html
+++ b/public/views/ordersPage/ordersPage.html
@@ -2,6 +2,12 @@
     <head>
         <title>changskitchen</title>
 
+        <!--Firebase-->
+    	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
+    	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
+	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
+	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
+
         <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
         <link rel="stylesheet" type="text/css" href="./ordersPage.css">
 
@@ -16,11 +22,6 @@
         <script src="../support/js/canvas.js"></script>
         -->
 
-        <!--Firebase-->
-    	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
-    	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
-	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
     </head>
 
     <body onload="clickedOrders(); load();">
@@ -49,7 +50,7 @@
                 </a>
             </div>
 
-            <i class="fa fa-sign-out-alt"></i>
+            <i class="fa fa-sign-out-alt" onclick="logOut();"></i>
 
         </div>
 
