--- a/public/views/support/css/topNavStyle.css
+++ b/public/views/support/css/topNavStyle.css
@@ -19,6 +19,7 @@ p {
 
 /* Top navigation bar */
 .TopNavBar {
+    cursor: pointer;
     height: 70px; line-height: 70px;
     vertical-align: middle;
     background-color: orange;
@@ -26,6 +27,7 @@ p {
 }
 
 .fa {
+    cursor: pointer;
     display: block; position: absolute;
     top: 50%; right: 30px; transform: translate(0%, -50%);
     margin-left: 30px;
@@ -37,6 +39,10 @@ p {
     font-size: 30px;
     cursor: pointer;
     color: rgb(255, 253, 253); 
+}
+
+.fa-sign-out-alt:hover {
+    color: red;
 }
 
 .HeadingWrapper {
