--- a/public/views/menuPage/menuPage.html
+++ b/public/views/menuPage/menuPage.html
@@ -15,11 +15,10 @@
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
         <script src="./menuPage.js"></script>        
 
-        <!--
-        <link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
+        <!--Canvas-->
+        <!--<link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
         <canvas></canvas>
-        <script src="../support/js/canvas.js"></script>
-        -->
+        <script src="../support/js/canvas.js"></script>-->
 
     </head>
 
