--- a/public/views/ordersPage/ordersPage.html
+++ b/public/views/ordersPage/ordersPage.html
@@ -15,12 +15,10 @@
         <script src="../support/js/topNavBar.js"></script>
         <script src="./ordersPage.js"></script>
 
-
-        <!--
-        <link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
+        <!--Canvas-->
+        <!--<link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
         <canvas></canvas>
-        <script src="../support/js/canvas.js"></script>
-        -->
+        <script src="../support/js/canvas.js"></script>-->
 
     </head>
 
