--- a/public/views/usersPage/usersPage.css
+++ b/public/views/usersPage/usersPage.css
@@ -6,6 +6,7 @@
 }
 
 .UserWrapper {
+    background-color: rgb(245, 244, 219);
     margin: 0px 10% 2px 10%;
     border: 2px solid orange;
     height: 50px;line-height: 50px;
@@ -13,6 +14,7 @@
 }
 
 .Name, .Phone, .Rank {
+    cursor: default;
     height: 50px; line-height: 50px;
     font-size: 150%;
 }
@@ -38,6 +40,7 @@
 }
 
 .BinImage {
+    cursor: pointer;
     height: 30px; width: 30px;
     float: right;
     margin: 10px;
