--- a/public/views/usersPage/usersPage.html
+++ b/public/views/usersPage/usersPage.html
@@ -16,11 +16,10 @@
         <script src="../support/js/topNavBar.js"></script>
         <script src="./usersPage.js"></script>
 
-        <!--
-        <link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
+        <!--Canvas-->
+        <!--<link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
         <canvas></canvas>
-        <script src="../support/js/canvas.js"></script>
-        -->
+        <script src="../support/js/canvas.js"></script>-->
 
     </head>
 
