Fix authentication bug

--- a/public/views/addDishPage/addDishPage.html
+++ b/public/views/addDishPage/addDishPage.html
@@ -16,7 +16,7 @@
         <script src="../support/js/topNavBar.js"></script>
         <script src="./addDishPage.js"></script>
         
-        <script type="text/javascript">
+        <!--<script type="text/javascript">
             firebase.auth().onAuthStateChanged(function(user) {
             if (user) {
                 document.getElementById("AddDish").style.backgroundColor = "rgb(236, 179, 72)";
@@ -25,7 +25,7 @@
                 window.alert("Please login first!");
             }
             });
-        </script>
+        </script>-->
 
         <!--Canvas-->
         <!--<link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
