Change delete icon

--- a/public/views/usersPage/usersPage.html
+++ b/public/views/usersPage/usersPage.html
@@ -64,8 +64,8 @@
                 <div class="UserWrapper">
                     <p class="Name">Truong Dinh Dong</p>
                     <p class="Phone">0911099706</p>
-                    <img class="BinImage" src="../support/images/bin.jpg">
                     <p class="Rank">Loyal User</p>
+                    <i class="fa fa-trash"></i>                    
                 </div>
 
             </div>
