--- a/public/views/usersPage/usersPage.css
+++ b/public/views/usersPage/usersPage.css
@@ -6,6 +6,7 @@
 }
 
 .UserWrapper {
+    position: relative;
     background-color: rgb(245, 244, 219);
     margin: 0px 10% 2px 10%;
     border: 2px solid orange;
@@ -20,29 +21,36 @@
 }
 
 .Name {
-    width: 200;
+    width: 300px;
+    text-align: left;
     margin-left: 30px; float: left;
     color: orange;
 }
 
 .Phone {
     width: 200px;
-    margin-left: 300px;
+    margin-left: 100px;
     float: left;
     color: black;
 }
 
 .Rank {
     width: 200px;
-    margin-right: 30px;
+    margin-right: 70px;
     float: right;
     color: gray;
 }
 
-.BinImage {
+.fa.fa-trash {
+    position: absolute;
+    cursor: pointer;   
+    float: right; margin-right: 0px;
+    height: 30px; width: 30px; line-height: 30px;
+    text-rendering: auto;
+}
+
+.fa-trash::before {
+    font-size: 25px;
     cursor: pointer;
-    height: 30px; width: 30px;
-    float: right;
-    margin: 10px;
-    object-fit: cover;
+    color: red;
 }
