Design users page

--- a/public/views/usersPage/usersPage.html
+++ b/public/views/usersPage/usersPage.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="../support/css/searchField.css">
         <link rel="stylesheet" type="text/css" href="./usersPage.css">
 
+        <script src="../support/js/class/user.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
         <script src="../support/js/topNavBar.js"></script>
         <script src="./usersPage.js"></script>
