--- a/public/views/usersPage/usersPage.css
+++ b/public/views/usersPage/usersPage.css
@@ -5,10 +5,17 @@
     font-size: 125%;
 }
 
+.UsersWrapper {
+    overflow: scroll;
+    height: 60%; width: 80%;
+    margin: 10px 10% 0px 10%;
+    border: 2px black solid;
+}
+
 .UserWrapper {
     position: relative;
     background-color: rgb(245, 244, 219);
-    margin: 0px 10% 2px 10%;
+    margin: 0px 0px 2px 0px;
     border: 2px solid orange;
     height: 50px;line-height: 50px;
     vertical-align: middle;
