--- a/public/views/addDishPage/addDishPage.html
+++ b/public/views/addDishPage/addDishPage.html
@@ -16,16 +16,13 @@
         <script src="../support/js/topNavBar.js"></script>
         <script src="./addDishPage.js"></script>
         
-        <!--<script type="text/javascript">
+        <script type="text/javascript">
             firebase.auth().onAuthStateChanged(function(user) {
-            if (user) {
-                document.getElementById("AddDish").style.backgroundColor = "rgb(236, 179, 72)";
-            } else {
+            if (!user) {
                 window.location.href = "/public/indexPage/indexPage.html";
-                window.alert("Please login first!");
             }
             });
-        </script>-->
+        </script>
 
         <!--Canvas-->
         <!--<link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
