--- a/public/views/usersPage/usersPage.css
+++ b/public/views/usersPage/usersPage.css
@@ -30,20 +30,21 @@
 .Name {
     width: 300px;
     text-align: left;
-    margin-left: 30px; float: left;
+    margin-left: 50px; float: left;
     color: orange;
 }
 
 .Phone {
     width: 200px;
-    margin-left: 100px;
+    margin-left: 150px;
     float: left;
     color: black;
 }
 
 .Rank {
-    width: 200px;
-    margin-right: 70px;
+    width: 300px;
+    margin-right: 50px;
+    text-align: right;
     float: right;
     color: gray;
 }
