--- a/public/views/ordersPage/ordersPage.html
+++ b/public/views/ordersPage/ordersPage.html
@@ -2,19 +2,27 @@
     <head>
         <title>changskitchen</title>
 
+        <!--JQuery-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
         <!--Firebase-->
     	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
     	<script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
 	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
 	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
 
+        <!--CSS-->
+        <link rel="stylesheet" type="text/css" href="../support/css/loader.css">
         <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
         <link rel="stylesheet" type="text/css" href="./ordersPage.css">
 
+        <!--JS-->
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+        <script src="../support/js/class/Order.js"></script>
         <script src="../support/js/topNavBar.js"></script>
         <script src="./ordersPage.js"></script>
 
+        <!--Prevent strangers-->
         <script type="text/javascript">
             firebase.auth().onAuthStateChanged(function(user) {
             if (!user) {
@@ -72,6 +80,12 @@
                 
             </div>
             
+        </div>
+
+        <div class="loader-wrapper">
+            <span class="loader">
+                <span class="loader-inner"></span>
+            </span>
         </div>
 
     </body>
