--- a/public/views/support/css/loader.css
+++ b/public/views/support/css/loader.css
@@ -14,9 +14,9 @@ body {
 }
 .loader-wrapper {
   width: 100%;
-  height: 91%;
+  height: 90%;
   position: absolute;
-  top: 9%;
+  top: 80px;
   left: 0;
   background-color: rgb(248, 236, 177);
   display:flex;
