--- a/public/views/support/css/topNavStyle.css
+++ b/public/views/support/css/topNavStyle.css
@@ -26,7 +26,7 @@ p {
 /* Top navigation bar */
 .TopNavBar {
     cursor: pointer;
-    height: 9%; line-height: 9%;
+    height: 80px; line-height: 80px;
     vertical-align: middle;
     background-color: orange;
     position: relative;
@@ -55,10 +55,10 @@ p {
     cursor: pointer;
     display: block;
     position: absolute;
-    top: 50%; left: 100px;
+    top: 50%; left: 5%;
     transform: translate(0%,-50%);
 
-    height: 50; width: 220px; line-height: 50px;
+    height: 70%; width: 18%; line-height: 50px;
     text-align: center;
     border-radius: 25px;
 
@@ -88,7 +88,7 @@ p {
     text-decoration: none;
     height: 100%;
     width: 150px;
-    line-height: 46px;
+    line-height: 100%;
 
     text-align: center;
 }
@@ -100,7 +100,7 @@ p {
 .ButtonTitle {
     cursor: pointer;
     top: 50%;
-    transform: translate(0%, 30%);
+    transform: translate(0, 175%);
     font-size: 130%;
     color: white;
 }
