--- a/public/views/ordersPage/ordersPage.html
+++ b/public/views/ordersPage/ordersPage.html
@@ -34,6 +34,7 @@
 
     <!--JS-->
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+        <script src="../support/js/class/OrderDish.js"></script>
         <script src="../support/js/class/Order.js"></script>
         <script src="../support/js/topNavBar.js"></script>
         <script src="./ordersPage.js"></script>
