--- a/public/views/ordersPage/ordersPage.html
+++ b/public/views/ordersPage/ordersPage.html
@@ -96,9 +96,9 @@
             <div class="DetailWrapper" id="DetailWrapper">
                 <!--Order's detail will appear here-->
 
-                <div class="limiter">
-                    <div class="container-table100">
-                        <div class="wrap-table100">
+                <div class="limiter" id="limiter">
+                    <div class="container-table100" id="container">
+                        <div class="wrap-table100" id="wrapper">
                             <div class="table100">
                                 <table>
                                     <thead>
