Add Search engine

--- a/public/views/ordersPage/ordersPage.html
+++ b/public/views/ordersPage/ordersPage.html
@@ -96,9 +96,9 @@
             <div class="DetailWrapper" id="DetailWrapper">
                 <!--Order's detail will appear here-->
 
-                <div class="limiter" id="limiter">
-                    <div class="container-table100" id="container">
-                        <div class="wrap-table100" id="wrapper">
+                <div class="limiter">
+                    <div class="container-table100">
+                        <div class="wrap-table100">
                             <div class="table100">
                                 <table>
                                     <thead>
@@ -109,7 +109,7 @@
                                             <th class="column6">Total</th>
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody id="tbody">
                                             <tr>
                                                 <td class="column3">iPhone X 64Gb Grey</td>
                                                 <td class="column4">$999.00</td>
