--- a/public/views/usersPage/usersPage.html
+++ b/public/views/usersPage/usersPage.html
@@ -73,7 +73,7 @@
 
             <p class="Title">Users</p>
 
-            <input class="SearchField" placeholder="Type to search">
+            <input class="SearchField" placeholder="Type to search" onkeyup="filter();" id="SearchBar">
 
             <div class="UsersWrapper" id="UsersWrapper">
                 <!--Users will be here-->
