Fetch order dishes

--- a/public/views/ordersPage/ordersPage.html
+++ b/public/views/ordersPage/ordersPage.html
@@ -37,6 +37,7 @@
         <script src="../support/js/class/OrderDish.js"></script>
         <script src="../support/js/class/Order.js"></script>
         <script src="../support/js/topNavBar.js"></script>
+        <script src="../support/js/class/MenuDish.js"></script>
         <script src="./ordersPage.js"></script>
 
     <!--Prevent strangers-->
@@ -110,24 +111,7 @@
                                         </tr>
                                     </thead>
                                     <tbody id="tbody">
-                                            <tr>
-                                                <td class="column3">iPhone X 64Gb Grey</td>
-                                                <td class="column4">$999.00</td>
-                                                <td class="column5">1</td>
-                                                <td class="column6">$999.00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="column3">Samsung S8 Black</td>
-                                                <td class="column4">$756.00</td>
-                                                <td class="column5">1</td>
-                                                <td class="column6">$756.00</td>
-                                            </tr>
-                                            <tr>
-                                                <td class="column3">Game Console Controller</td>
-                                                <td class="column4">$22.00</td>
-                                                <td class="column5">2</td>
-                                                <td class="column6">$44.00</td>
-                                            </tr>
+                                        <!--Dishes will appear here-->
                                     </tbody>
                                 </table>
                             </div>
