--- a/public/views/addDishPage/addDishPage.html
+++ b/public/views/addDishPage/addDishPage.html
@@ -2,20 +2,25 @@
     <head>
         <title>changskitchen</title>
 
-        <!--Firebase-->
+    <!--Firebase-->
 	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-app.js"></script>
 	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-auth.js"></script>
 	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
 	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
 
+    <!--CSS-->
+        <link rel="stylesheet" type="text/css" href="../support/css/loader.css">
         <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
         <link rel="stylesheet" type="text/css" href="../support/css/searchField.css">
         <link rel="stylesheet" type="text/css" href="./addDishPage.css">
 
+    <!--JS-->
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
         <script src="../support/js/topNavBar.js"></script>
+        <script src="../support/js/class/MenuDish.js"></script>
         <script src="./addDishPage.js"></script>
-        
+    
+    <!--Prevent strangers-->
         <script type="text/javascript">
             firebase.auth().onAuthStateChanged(function(user) {
             if (!user) {
@@ -24,7 +29,7 @@
             });
         </script>
 
-        <!--Canvas-->
+    <!--Canvas-->
         <!--<link rel="stylesheet" type="text/css" href="../support/css/canvas.css">
         <canvas></canvas>
         <script src="../support/js/canvas.js"></script>-->
