--- a/public/views/addDishPage/addDishPage.html
+++ b/public/views/addDishPage/addDishPage.html
@@ -8,6 +8,9 @@
 	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-database.js"></script>
 	    <script src="https://www.gstatic.com/firebasejs/8.6.7/firebase-storage.js"></script>
 
+    <!--JQuery-->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        
     <!--CSS-->
         <link rel="stylesheet" type="text/css" href="../support/css/loader.css">
         <link rel="stylesheet" type="text/css" href="../support/css/topNavStyle.css">
@@ -86,6 +89,12 @@
                 
             </div>
 
+        </div>
+
+        <div class="loader-wrapper">
+            <span class="loader">
+                <span class="loader-inner"></span>
+            </span>
         </div>
     </body>
 </html>
