Fetch dish's image

--- a/public/views/addDishPage/addDishPage.html
+++ b/public/views/addDishPage/addDishPage.html
@@ -80,13 +80,7 @@
             </div>
         
             <div class="Dishes" id="Dishes">
-                
-                <div class="DishWrapper">
-                    <img src="https://res.cloudinary.com/swiggy/image/upload/f_auto,q_auto,fl_lossy/ae3qqfev6j7hzhxw6if3" class="Image">
-                    <p class="Name">Chocolate Ice-cream</p>
-                    <p class="Price">$100</p>
-                </div>
-                
+               <!--Dish will appear here-->
             </div>
 
         </div>
@@ -96,5 +90,6 @@
                 <span class="loader-inner"></span>
             </span>
         </div>
+
     </body>
 </html>
