--- a/public/views/ordersPage/ordersPage.html
+++ b/public/views/ordersPage/ordersPage.html
@@ -119,6 +119,19 @@
                     </div>
                 </div>
 
+                <div class="TotalLabel" id="TotalLabel">
+                    <p>Total: $0</p>
+                </div>
+
+                <div class="TimeLabel" id="TimeLabel">
+                    <p>Pick-up Time:</p>
+                </div>
+
+                <div class="ProgressButtons">
+                    <i class="far fa-thumbs-up" onclick="upClicked();"></i>
+                    <i class="far fa-thumbs-down" onclick="downClicked();"></i>
+                </div>
+
             </div>
             
         </div>
