--- a/public/views/ordersPage/orderDetail.css
+++ b/public/views/ordersPage/orderDetail.css
@@ -8,9 +8,44 @@
     text-align: center;
 }
 
-.OrderTitle {
-    font-size: 30px;
+.TotalLabel {
+    font-size: 25px;
     color: orange;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
 }
+
+.TimeLabel {
+    font-size: 20px;
+    color: black;
+    margin-top: 20px;
+}
+
+.ProgressButtons {
+    margin-top: 20px;
+    width: 100%; height: 30px; line-height: 30px;
+    position: relative;
+}
+
+.far {
+    cursor: pointer;
+    display: block; position: relative; float: right;
+    height: 30px; width: 30px; line-height: 30px;
+    text-rendering: auto;
+    margin-right: 20px;
+}
+
+.far.fa-thumbs-down {
+    top: 5px;
+    color: red;
+}
+
+.fa-thumbs-up {
+    color: green;
+}
+
+.fa-thumbs-up::before, .fa-thumbs-down::before {
+    font-size: 30px;
+    cursor: pointer;
+}
+
