Add serch engine

--- a/public/views/addDishPage/addDishPage.html
+++ b/public/views/addDishPage/addDishPage.html
@@ -74,7 +74,7 @@
             <p class="Title">Dishes</p>
 
             <div class="MiddleWrapper">
-                <input class="SearchField" placeholder="Type to search">
+                <input class="SearchField" id="SearchBar" placeholder="Type to search" onkeyup="filter();">
                 <p class="EditButton">Edit</p>
                 <p class="AddButton">Add</p>    
             </div>
