--- a/public/views/ordersPage/detailTable/css/main.css
+++ b/public/views/ordersPage/detailTable/css/main.css
@@ -130,6 +130,7 @@ tbody tr:nth-child(even) {
 }
 
 tbody tr {
+  cursor: default;
   font-family: OpenSans-Regular;
   font-size: 15px;
   color: #808080;
