--- a/public/views/ordersPage/detailTable/css/main.css
+++ b/public/views/ordersPage/detailTable/css/main.css
@@ -1,16 +1,3 @@
-
-
-/*//////////////////////////////////////////////////////////////////
-[ FONT ]*/
-
-
-@font-face {
-  font-family: OpenSans-Regular;
-  src: url('../fonts/OpenSans/OpenSans-Regular.ttf');
-}
-
-
-
 /*//////////////////////////////////////////////////////////////////
 [ RESTYLE TAG ]*/
 * {
@@ -21,7 +8,7 @@
 
 body, html {
 	height: 100%;
-	font-family: sans-serif;
+	/*font-family: sans-serif;*/
 }
 
 /* ------------------------------------ */
@@ -118,7 +105,7 @@ table td.r, table th.r {
 }
 
 .table100-head th{
-  font-family: OpenSans-Regular;
+  /*font-family: OpenSans-Regular;*/
   font-size: 18px;
   color: orange;
   line-height: 1.2;
@@ -131,7 +118,7 @@ tbody tr:nth-child(even) {
 
 tbody tr {
   cursor: default;
-  font-family: OpenSans-Regular;
+  /*font-family: OpenSans-Regular;*/
   font-size: 15px;
   color: #808080;
   line-height: 1.2;
@@ -190,7 +177,7 @@ tbody tr {
     margin-bottom: 0;
   }
   table tbody tr td:before {
-    font-family: OpenSans-Regular;
+    /*font-family: OpenSans-Regular;*/
     font-size: 14px;
     color: #999999;
     line-height: 1.2;
