--- a/public/Authentication/LoginPage/css/main.css
+++ b/public/Authentication/LoginPage/css/main.css
@@ -7,7 +7,7 @@
 
 @font-face {
   font-family: OpenSans-Regular;
-  src: url('../fonts/OpenSans/OpenSans-Regular.ttf'); 
+  src: url('/views/support/fonts/OpenSans/OpenSans-Regular.ttf')
 }
 
 
