--- a/public/views/support/css/topNavStyle.css
+++ b/public/views/support/css/topNavStyle.css
@@ -14,11 +14,12 @@
     margin: 0;
 }
 
-body {
+body, html {
     background-color: rgb(248, 236, 177);
+    font-family: OpenSans-Regular;
 }
 
-p {
+p, h1, h2, h3, h4, h5 {
     cursor: default;
     font-family: OpenSans-Regular;
 }
